# typescript/src/apis/DiscoveryV1Api.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hathora Cloud API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  DiscoveryResponseInner,
+} from '../models';
+import {
+    DiscoveryResponseInnerFromJSON,
+    DiscoveryResponseInnerToJSON,
+} from '../models';
+
+/**
+ * DiscoveryV1Api - interface
+ * 
+ * @export
+ * @interface DiscoveryV1ApiInterface
+ */
+export interface DiscoveryV1ApiInterface {
+    /**
+     * 
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof DiscoveryV1ApiInterface
+     */
+    getPingServiceEndpointsRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<DiscoveryResponseInner>>>;
+
+    /**
+     */
+    getPingServiceEndpoints(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<DiscoveryResponseInner>>;
+
+}
+
+/**
+ * 
+ */
+export class DiscoveryV1Api extends runtime.BaseAPI implements DiscoveryV1ApiInterface {
+
+    /**
+     */
+    async getPingServiceEndpointsRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<DiscoveryResponseInner>>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/discovery/v1/ping`,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(DiscoveryResponseInnerFromJSON));
+    }
+
+    /**
+     */
+    async getPingServiceEndpoints(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<DiscoveryResponseInner>> {
+        const response = await this.getPingServiceEndpointsRaw(initOverrides);
+        return await response.value();
+    }
+
+}
